tests/tooling/fixtures/native/recovery/negative/negative_message_parser_nil_receiver_missing_keyword_colon.objc3
// Negative fixture: nil receiver keyword segment missing ':' token.
// Expected diagnostic code(s): O3P113.
module NegativeMessageParserNilReceiverMissingKeywordColon;

fn main() {
  let receiver = nil;
  return [receiver sum: 1 with 2];
}
